# devmind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: __init__.py  sources.yaml
docs/: requirement-detailed.md  requirement.md
src/devmind/: __init__.py  cli.py
src/devmind/agents/: __init__.py  stock_agent.py
src/devmind/agents/graph/: prediction_graph.py  state.py
src/devmind/agents/tools/: market_tools.py  vector_tools.py
src/devmind/config/: __init__.py  settings.py
src/devmind/data/: __init__.py
src/devmind/data/collectors/: base_collector.py  market_collector.py  news_collector.py
src/devmind/data/database/: database.py
src/devmind/data/processors/: event_extractor.py  sentiment_analyzer.py
src/devmind/data/vectorstore/: milvus_client.py
src/devmind/models/: __init__.py  base.py  market.py  prediction.py  types.py
tests/: __init__.py  split_document.py  test_agent.py  test_collectors.py  test_models.py
